--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rufio-server",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A server for a Rufio site",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,9 @@
     "url": "https://github.com/wesleytodd/rufio-server/issues"
   },
   "homepage": "https://github.com/wesleytodd/rufio-server",
+  "peerDependencies": {
+    "rufio": "~0.1.3"
+  },
   "dependencies": {
     "express": "~3.4.8"
   }
