--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rufio-server",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A server for a Rufio site",
   "main": "index.js",
   "scripts": {
@@ -20,10 +20,8 @@
     "url": "https://github.com/wesleytodd/rufio-server/issues"
   },
   "homepage": "https://github.com/wesleytodd/rufio-server",
-  "peerDependencies": {
-    "rufio": "~0.1.3"
-  },
   "dependencies": {
+    "rufio": "~0.1.3",
     "express": "~3.4.8"
   }
 }
