--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A server for a Rufio site",
   "main": "index.js",
   "scripts": {
+    "babel": "babel src --out-dir lib",
+    "watch": "babel src --watch --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +23,10 @@
   },
   "homepage": "https://github.com/wesleytodd/rufio-server",
   "dependencies": {
-    "rufio": "~0.1.3",
-    "express": "~3.4.8"
+    "router": "^1.1.4"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.5.0",
+    "babel-cli": "^6.5.0"
   }
 }
