--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/wesleytodd/rufio-server",
   "dependencies": {
-    "router": "^1.1.4"
+    "router": "^1.1.4",
+    "through2": "^2.0.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
