--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/wesleytodd/rufio-server",
   "dependencies": {
+    "concat-stream": "^1.5.1",
+    "end-of-stream": "^1.1.0",
+    "mime": "^1.3.4",
+    "pump": "^1.0.1",
     "router": "^1.1.4",
     "through2": "^2.0.1"
   },
